首页样式修改（添加底部导航栏与icon）

--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,16 +1,8 @@
-
 @import '../../assets/less/color.less';
-@import '../../assets/less/cell.less';
+
 
 .index {
     background: #F8F8F8;
-}
-
-.leave-name {
-    font-size: 32px;
-    line-height: 32px;
-    padding: 3% 0;
-    
 }
 
 .description {
@@ -18,57 +10,21 @@
     color: #cecece;
 }
 
-.leave-content {
-    padding-left: 36px;
-    line-height: 36px;
-    position: relative;
-    .circle {
-        border: 0;
-        // background-color: #f00;
-        border-radius: 100px;
-        width: 20px;
-        height: 20px;
-        vertical-align: middle;
-        &.circle-0 {
-            background-color: @valcano-6;
-        }
-        &.circle-1 {
-            background-color: @gold-6;
-        }
-        &.circle-2 {
-            background-color: @yellow-6;
-        }
-        &.circle-3 {
-            background-color: @lime-6;
-        }
-        &.circle-4 {
-            background-color: @green-6;
-        }
-        &.circle-5 {
-            background-color: @cyan-6;
-        }
-        &.circle-6 {
-            background-color: @blue-6;
-        }
-        &.circle-7 {
-            background-color: @geekblue-6;
-        }
-        &.circle-8 {
-            background-color: @purple-6;
-        }
-        &.circle-9 {
-            background-color: @magenta-6;
-        }
-        &.circle-10 {
-            background-color: @red-6;
+.footer {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    border-top: 1px solid @gray-6;
+    padding: 18px 0;
+    .nav {
+        color: @gray-6;
+        flex-direction: column;
+        text-align: center;
+        .at-icon-block {
+            display: block;
         }
     }
-
-    .rest {       
-        font-size: 32px;
-    }
-    .dispense {
-        font-size: 24px;
-        color: #cecece;
+    .nav.current {
+        color: @blue-6;
     }
 }
