首页样式修改

--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -10,12 +10,21 @@
     color: #cecece;
 }
 
+.container {
+    padding-bottom: 140px;
+}
+
 .footer {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
     border-top: 1px solid @gray-6;
     padding: 18px 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: @gray-1;
     .nav {
         color: @gray-6;
         flex-direction: column;
