新增我要销假页面(30%)

--- a/src/pages/index/components/leaveList.less
+++ b/src/pages/index/components/leaveList.less
@@ -1,6 +1,11 @@
 @import '../../../assets/less/color.less';
 @import '../../../assets/less/cell.less';
 
+.description {
+    padding: 24px 24px 0 24px;
+    color: #cecece;
+}
+
 .leave-content {
     padding-left: 36px;
     line-height: 36px;
