--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -2,16 +2,14 @@
 
 
 .index {
-    background: #F8F8F8;
+    
 }
 
-.description {
-    padding: 24px 24px 0 24px;
-    color: #cecece;
-}
 
-.container {
+
+.index-container {
     padding-bottom: 140px;
+    background: #F8F8F8;
 }
 
 .footer {
