--- a/src/pages/form/components/beginLeave.less
+++ b/src/pages/form/components/beginLeave.less
@@ -39,8 +39,13 @@
         justify-content: space-between;
         flex-direction: row;
         .cell-label {
-            width: 30%;
+            width: 60%;
             border-right: 0;
         }
+        
+    }
+    .balance {
+        color: @gray-7;
+        padding-left: 24px;
     }
 }
