--- a/src/assets/less/cell.less
+++ b/src/assets/less/cell.less
@@ -1,3 +1,4 @@
+@import '../less/color.less';
 .cell {
     border: 0px;
     padding: 24px;
@@ -6,6 +7,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    .required {
+        color: @red-6;
+        display: inline-block;
+        margin-right: 6px;
+        vertical-align: middle;
+    }
     
     .prefix, .suffix {        
         margin: 0 16px 0 0;
