完善表单页面

--- a/src/pages/form/components/beginLeave.less
+++ b/src/pages/form/components/beginLeave.less
@@ -22,8 +22,11 @@
         }
         .avatar {
             margin: 0 0.2rem;
-            width: 0.5rem;
-            height: 0.5rem;
+            // width: 0.5rem; // 图片在钉钉显示正常,在微信小程序显示国小
+            // height: 0.5rem;
+            width: 32px;
+            height: 32px;
+            
             border-radius: 100px;
         }
         .btn {
