--- a/src/pages/form/components/leaveTimeForm.less
+++ b/src/pages/form/components/leaveTimeForm.less
@@ -1,2 +1,10 @@
 .leave-time-form {
+    .required {
+        color: #f00;
+        display: inline-block;
+        margin: 0 3px;
+    }
+    .submit-button {
+        margin-top: 24px;
+    }
 }
