--- a/src/pages/index/components/backList.less
+++ b/src/pages/index/components/backList.less
@@ -12,8 +12,10 @@
         width: 20%;
     }
     .avatar {
-        width: 0.9rem;
-        height: 0.9rem;
+        // width: 0.9rem;
+        // height: 0.9rem;
+        width: 64px;
+        height: 64px;
         border-radius: 100px;
     }
     .container {
